2008-07-29  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-index-manager.[ch]: Rework the code here to
	initialize a bit more thoroughly and to print what is going on
	more clearly similar to how we do the db manager. Also make sure
	we remove indexes on reindex, not just temporary files.

2008-07-29  Carlos Garnacho  <carlos@imendio.com>

	* src/tracker-indexer/modules/evolution.c (get_metadata_for_mbox)
	(get_imap_message_body) (get_metadata_for_imap): Index message body
	for both mbox and imap.

2008-07-29  Carlos Garnacho  <carlos@imendio.com>

	Support saving metadata with multiple items.

	* src/tracker-indexer/tracker-metadata.[ch]: Old code was removed,
	these files now contain a TrackerMetadata struct, which is used to
	store metadata, taking care of the type, whether it has multiple
	items, how data must be freed, ...
	* src/tracker-module.h:
	* src/tracker-indexer-module.[ch]: Adapt modules API to return a
	TrackerMetadata instead of a GHashTable for metadata.
	* src/tracker-indexer/tracker-indexer-db.c: Use TrackerMetadata API.
	Also support storing metadata with multiple values.
	* src/tracker-indexer/modules/*.c: Adapt to module API changes, also
	store metadata lists where appropriate (mimetypes/categories for
	applications, recipients for mail).

2008-07-28  Ivan Frade  <ivan.frade@nokia.com>
	* src/tracker-search-tool/tracker-search-tool.c:
	(g_search_app_create): Remove hardcoding in the category ->
	service description hash table. This fixes the categories in
	tracker-search-tool.
	
2008-07-28  Ivan Frade  <ivan.frade@nokia.com>

	* src/tracker-indexer/tracker-indexer.c:
	(index_text_contents): Added function to add the contents of the
	file into QDBM.
	
2008-07-28  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/trackerd/tracker-index-manager.c:
	* src/trackerd/tracker-main.c:
	* src/trackerd/tracker-index-manager.h:

	Removing the QDBM indexes in case of force-reindex

2008-07-28  Ivan Frade  <ivan.frade@nokia.com>
	